libraries/adaptive-expressions/adaptive/expressions/generated/common_regexParser.py
# Generated from common_regex.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class common_regexParser(Parser):

    grammarFileName = "common_regex.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'\\a'",
        "'\\c'",
        "'\\e'",
        "'\\f'",
        "'\\n'",
        "'\\r'",
        "'\\t'",
        "'\\'",
        "<INVALID>",
        "'.'",
        "'\\d'",
        "'\\D'",
        "<INVALID>",
        "<INVALID>",
        "'\\s'",
        "'\\S'",
        "'\\w'",
        "'\\W'",
        "'['",
        "']'",
        "'^'",
        "'-'",
        "'?'",
        "'+'",
        "'*'",
        "'{'",
        "'}'",
        "','",
        "'$'",
        "'|'",
        "'('",
        "')'",
        "'<'",
        "'>'",
        "'''",
        "'_'",
        "':'",
        "'#'",
        "'='",
        "'!'",
        "'&'",
        "'a'",
        "'b'",
        "'c'",
        "'d'",
        "'e'",
        "'f'",
        "'g'",
        "'h'",
        "'i'",
        "'j'",
        "'k'",
        "'l'",
        "'m'",
        "'n'",
        "'o'",
        "'p'",
        "'q'",
        "'r'",
        "'s'",
        "'t'",
        "'u'",
        "'v'",
        "'w'",
        "'x'",
        "'y'",
        "'z'",
        "'A'",
        "'B'",
        "'C'",
        "'D'",
        "'E'",
        "'F'",
        "'G'",
        "'H'",
        "'I'",
        "'J'",
        "'K'",
        "'L'",
        "'M'",
        "'N'",
        "'O'",
        "'P'",
        "'Q'",
        "'R'",
        "'S'",
        "'T'",
        "'U'",
        "'V'",
        "'W'",
        "'X'",
        "'Y'",
        "'Z'",
        "'1'",
        "'2'",
        "'3'",
        "'4'",
        "'5'",
        "'6'",
        "'7'",
        "'8'",
        "'9'",
        "'0'",
    ]

    symbolicNames = [
        "<INVALID>",
        "Quoted",
        "BlockQuoted",
        "BellChar",
        "ControlChar",
        "EscapeChar",
        "FormFeed",
        "NewLine",
        "CarriageReturn",
        "Tab",
        "Backslash",
        "HexChar",
        "Dot",
        "DecimalDigit",
        "NotDecimalDigit",
        "CharWithProperty",
        "CharWithoutProperty",
        "WhiteSpace",
        "NotWhiteSpace",
        "WordChar",
        "NotWordChar",
        "CharacterClassStart",
        "CharacterClassEnd",
        "Caret",
        "Hyphen",
        "QuestionMark",
        "Plus",
        "Star",
        "OpenBrace",
        "CloseBrace",
        "Comma",
        "EndOfSubject",
        "Pipe",
        "OpenParen",
        "CloseParen",
        "LessThan",
        "GreaterThan",
        "SingleQuote",
        "Underscore",
        "Colon",
        "Hash",
        "Equals",
        "Exclamation",
        "Ampersand",
        "ALC",
        "BLC",
        "CLC",
        "DLC",
        "ELC",
        "FLC",
        "GLC",
        "HLC",
        "ILC",
        "JLC",
        "KLC",
        "LLC",
        "MLC",
        "NLC",
        "OLC",
        "PLC",
        "QLC",
        "RLC",
        "SLC",
        "TLC",
        "ULC",
        "VLC",
        "WLC",
        "XLC",
        "YLC",
        "ZLC",
        "AUC",
        "BUC",
        "CUC",
        "DUC",
        "EUC",
        "FUC",
        "GUC",
        "HUC",
        "IUC",
        "JUC",
        "KUC",
        "LUC",
        "MUC",
        "NUC",
        "OUC",
        "PUC",
        "QUC",
        "RUC",
        "SUC",
        "TUC",
        "UUC",
        "VUC",
        "WUC",
        "XUC",
        "YUC",
        "ZUC",
        "D1",
        "D2",
        "D3",
        "D4",
        "D5",
        "D6",
        "D7",
        "D8",
        "D9",
        "D0",
        "OtherChar",
    ]

    RULE_parse = 0
    RULE_alternation = 1
    RULE_expr = 2
    RULE_element = 3
    RULE_quantifier = 4
    RULE_quantifier_type = 5
    RULE_character_class = 6
    RULE_capture = 7
    RULE_non_capture = 8
    RULE_option = 9
    RULE_option_flag = 10
    RULE_atom = 11
    RULE_cc_atom = 12
    RULE_shared_atom = 13
    RULE_literal = 14
    RULE_cc_literal = 15
    RULE_shared_literal = 16
    RULE_number = 17
    RULE_octal_char = 18
    RULE_octal_digit = 19
    RULE_digits = 20
    RULE_digit = 21
    RULE_name = 22
    RULE_alpha_nums = 23
    RULE_non_close_parens = 24
    RULE_non_close_paren = 25
    RULE_letter = 26

    ruleNames = [
        "parse",
        "alternation",
        "expr",
        "element",
        "quantifier",
        "quantifier_type",
        "character_class",
        "capture",
        "non_capture",
        "option",
        "option_flag",
        "atom",
        "cc_atom",
        "shared_atom",
        "literal",
        "cc_literal",
        "shared_literal",
        "number",
        "octal_char",
        "octal_digit",
        "digits",
        "digit",
        "name",
        "alpha_nums",
        "non_close_parens",
        "non_close_paren",
        "letter",
    ]

    EOF = Token.EOF
    Quoted = 1
    BlockQuoted = 2
    BellChar = 3
    ControlChar = 4
    EscapeChar = 5
    FormFeed = 6
    NewLine = 7
    CarriageReturn = 8
    Tab = 9
    Backslash = 10
    HexChar = 11
    Dot = 12
    DecimalDigit = 13
    NotDecimalDigit = 14
    CharWithProperty = 15
    CharWithoutProperty = 16
    WhiteSpace = 17
    NotWhiteSpace = 18
    WordChar = 19
    NotWordChar = 20
    CharacterClassStart = 21
    CharacterClassEnd = 22
    Caret = 23
    Hyphen = 24
    QuestionMark = 25
    Plus = 26
    Star = 27
    OpenBrace = 28
    CloseBrace = 29
    Comma = 30
    EndOfSubject = 31
    Pipe = 32
    OpenParen = 33
    CloseParen = 34
    LessThan = 35
    GreaterThan = 36
    SingleQuote = 37
    Underscore = 38
    Colon = 39
    Hash = 40
    Equals = 41
    Exclamation = 42
    Ampersand = 43
    ALC = 44
    BLC = 45
    CLC = 46
    DLC = 47
    ELC = 48
    FLC = 49
    GLC = 50
    HLC = 51
    ILC = 52
    JLC = 53
    KLC = 54
    LLC = 55
    MLC = 56
    NLC = 57
    OLC = 58
    PLC = 59
    QLC = 60
    RLC = 61
    SLC = 62
    TLC = 63
    ULC = 64
    VLC = 65
    WLC = 66
    XLC = 67
    YLC = 68
    ZLC = 69
    AUC = 70
    BUC = 71
    CUC = 72
    DUC = 73
    EUC = 74
    FUC = 75
    GUC = 76
    HUC = 77
    IUC = 78
    JUC = 79
    KUC = 80
    LUC = 81
    MUC = 82
    NUC = 83
    OUC = 84
    PUC = 85
    QUC = 86
    RUC = 87
    SUC = 88
    TUC = 89
    UUC = 90
    VUC = 91
    WUC = 92
    XUC = 93
    YUC = 94
    ZUC = 95
    D1 = 96
    D2 = 97
    D3 = 98
    D4 = 99
    D5 = 100
    D6 = 101
    D7 = 102
    D8 = 103
    D9 = 104
    D0 = 105
    OtherChar = 106

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ParseContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alternation(self):
            return self.getTypedRuleContext(common_regexParser.AlternationContext, 0)

        def EOF(self):
            return self.getToken(common_regexParser.EOF, 0)

        def getRuleIndex(self):
            return common_regexParser.RULE_parse

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

    def parse(self):

        localctx = common_regexParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.alternation()
            self.state = 55
            self.match(common_regexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AlternationContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(common_regexParser.ExprContext)
            else:
                return self.getTypedRuleContext(common_regexParser.ExprContext, i)

        def Pipe(self, i: int = None):
            if i is None:
                return self.getTokens(common_regexParser.Pipe)
            else:
                return self.getToken(common_regexParser.Pipe, i)

        def getRuleIndex(self):
            return common_regexParser.RULE_alternation

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAlternation"):
                listener.enterAlternation(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAlternation"):
                listener.exitAlternation(self)

    def alternation(self):

        localctx = common_regexParser.AlternationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_alternation)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.expr()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == common_regexParser.Pipe:
                self.state = 58
                self.match(common_regexParser.Pipe)
                self.state = 59
                self.expr()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(common_regexParser.ElementContext)
            else:
                return self.getTypedRuleContext(common_regexParser.ElementContext, i)

        def getRuleIndex(self):
            return common_regexParser.RULE_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpr"):
                listener.enterExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpr"):
                listener.exitExpr(self)

    def expr(self):

        localctx = common_regexParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << common_regexParser.Quoted)
                        | (1 << common_regexParser.BlockQuoted)
                        | (1 << common_regexParser.BellChar)
                        | (1 << common_regexParser.ControlChar)
                        | (1 << common_regexParser.EscapeChar)
                        | (1 << common_regexParser.FormFeed)
                        | (1 << common_regexParser.NewLine)
                        | (1 << common_regexParser.CarriageReturn)
                        | (1 << common_regexParser.Tab)
                        | (1 << common_regexParser.Backslash)
                        | (1 << common_regexParser.HexChar)
                        | (1 << common_regexParser.Dot)
                        | (1 << common_regexParser.DecimalDigit)
                        | (1 << common_regexParser.NotDecimalDigit)
                        | (1 << common_regexParser.CharWithProperty)
                        | (1 << common_regexParser.CharWithoutProperty)
                        | (1 << common_regexParser.WhiteSpace)
                        | (1 << common_regexParser.NotWhiteSpace)
                        | (1 << common_regexParser.WordChar)
                        | (1 << common_regexParser.NotWordChar)
                        | (1 << common_regexParser.CharacterClassStart)
                        | (1 << common_regexParser.CharacterClassEnd)
                        | (1 << common_regexParser.Caret)
                        | (1 << common_regexParser.Hyphen)
                        | (1 << common_regexParser.OpenBrace)
                        | (1 << common_regexParser.CloseBrace)
                        | (1 << common_regexParser.Comma)
                        | (1 << common_regexParser.EndOfSubject)
                        | (1 << common_regexParser.OpenParen)
                        | (1 << common_regexParser.LessThan)
                        | (1 << common_regexParser.GreaterThan)
                        | (1 << common_regexParser.SingleQuote)
                        | (1 << common_regexParser.Underscore)
                        | (1 << common_regexParser.Colon)
                        | (1 << common_regexParser.Hash)
                        | (1 << common_regexParser.Equals)
                        | (1 << common_regexParser.Exclamation)
                        | (1 << common_regexParser.Ampersand)
                        | (1 << common_regexParser.ALC)
                        | (1 << common_regexParser.BLC)
                        | (1 << common_regexParser.CLC)
                        | (1 << common_regexParser.DLC)
                        | (1 << common_regexParser.ELC)
                        | (1 << common_regexParser.FLC)
                        | (1 << common_regexParser.GLC)
                        | (1 << common_regexParser.HLC)
                        | (1 << common_regexParser.ILC)
                        | (1 << common_regexParser.JLC)
                        | (1 << common_regexParser.KLC)
                        | (1 << common_regexParser.LLC)
                        | (1 << common_regexParser.MLC)
                        | (1 << common_regexParser.NLC)
                        | (1 << common_regexParser.OLC)
                        | (1 << common_regexParser.PLC)
                        | (1 << common_regexParser.QLC)
                        | (1 << common_regexParser.RLC)
                        | (1 << common_regexParser.SLC)
                        | (1 << common_regexParser.TLC)
                    )
                )
                != 0
            ) or (
                (((_la - 64)) & ~0x3F) == 0
                and (
                    (1 << (_la - 64))
                    & (
                        (1 << (common_regexParser.ULC - 64))
                        | (1 << (common_regexParser.VLC - 64))
                        | (1 << (common_regexParser.WLC - 64))
                        | (1 << (common_regexParser.XLC - 64))
                        | (1 << (common_regexParser.YLC - 64))
                        | (1 << (common_regexParser.ZLC - 64))
                        | (1 << (common_regexParser.AUC - 64))
                        | (1 << (common_regexParser.BUC - 64))
                        | (1 << (common_regexParser.CUC - 64))
                        | (1 << (common_regexParser.DUC - 64))
                        | (1 << (common_regexParser.EUC - 64))
                        | (1 << (common_regexParser.FUC - 64))
                        | (1 << (common_regexParser.GUC - 64))
                        | (1 << (common_regexParser.HUC - 64))
                        | (1 << (common_regexParser.IUC - 64))
                        | (1 << (common_regexParser.JUC - 64))
                        | (1 << (common_regexParser.KUC - 64))
                        | (1 << (common_regexParser.LUC - 64))
                        | (1 << (common_regexParser.MUC - 64))
                        | (1 << (common_regexParser.NUC - 64))
                        | (1 << (common_regexParser.OUC - 64))
                        | (1 << (common_regexParser.PUC - 64))
                        | (1 << (common_regexParser.QUC - 64))
                        | (1 << (common_regexParser.RUC - 64))
                        | (1 << (common_regexParser.SUC - 64))
                        | (1 << (common_regexParser.TUC - 64))
                        | (1 << (common_regexParser.UUC - 64))
                        | (1 << (common_regexParser.VUC - 64))
                        | (1 << (common_regexParser.WUC - 64))
                        | (1 << (common_regexParser.XUC - 64))
                        | (1 << (common_regexParser.YUC - 64))
                        | (1 << (common_regexParser.ZUC - 64))
                        | (1 << (common_regexParser.D1 - 64))
                        | (1 << (common_regexParser.D2 - 64))
                        | (1 << (common_regexParser.D3 - 64))
                        | (1 << (common_regexParser.D4 - 64))
                        | (1 << (common_regexParser.D5 - 64))
                        | (1 << (common_regexParser.D6 - 64))
                        | (1 << (common_regexParser.D7 - 64))
                        | (1 << (common_regexParser.D8 - 64))
                        | (1 << (common_regexParser.D9 - 64))
                        | (1 << (common_regexParser.D0 - 64))
                        | (1 << (common_regexParser.OtherChar - 64))
                    )
                )
                != 0
            ):
                self.state = 65
                self.element()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(common_regexParser.AtomContext, 0)

        def quantifier(self):
            return self.getTypedRuleContext(common_regexParser.QuantifierContext, 0)

        def getRuleIndex(self):
            return common_regexParser.RULE_element

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterElement"):
                listener.enterElement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitElement"):
                listener.exitElement(self)

    def element(self):

        localctx = common_regexParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.atom()
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 72
                self.quantifier()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuantifierContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QuestionMark(self):
            return self.getToken(common_regexParser.QuestionMark, 0)

        def quantifier_type(self):
            return self.getTypedRuleContext(
                common_regexParser.Quantifier_typeContext, 0
            )

        def Plus(self):
            return self.getToken(common_regexParser.Plus, 0)

        def Star(self):
            return self.getToken(common_regexParser.Star, 0)

        def OpenBrace(self):
            return self.getToken(common_regexParser.OpenBrace, 0)

        def number(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(common_regexParser.NumberContext)
            else:
                return self.getTypedRuleContext(common_regexParser.NumberContext, i)

        def CloseBrace(self):
            return self.getToken(common_regexParser.CloseBrace, 0)

        def Comma(self):
            return self.getToken(common_regexParser.Comma, 0)

        def getRuleIndex(self):
            return common_regexParser.RULE_quantifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantifier"):
                listener.enterQuantifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantifier"):
                listener.exitQuantifier(self)

    def quantifier(self):

        localctx = common_regexParser.QuantifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_quantifier)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(common_regexParser.QuestionMark)
                self.state = 76
                self.quantifier_type()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(common_regexParser.Plus)
                self.state = 78
                self.quantifier_type()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(common_regexParser.Star)
                self.state = 80
                self.quantifier_type()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.match(common_regexParser.OpenBrace)
                self.state = 82
                self.number()
                self.state = 83
                self.match(common_regexParser.CloseBrace)
                self.state = 84
                self.quantifier_type()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.match(common_regexParser.OpenBrace)
                self.state = 87
                self.number()
                self.state = 88
                self.match(common_regexParser.Comma)
                self.state = 89
                self.match(common_regexParser.CloseBrace)
                self.state = 90
                self.quantifier_type()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.match(common_regexParser.OpenBrace)
                self.state = 93
                self.number()
                self.state = 94
                self.match(common_regexParser.Comma)
                self.state = 95
                self.number()
                self.state = 96
                self.match(common_regexParser.CloseBrace)
                self.state = 97
                self.quantifier_type()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Quantifier_typeContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Plus(self):
            return self.getToken(common_regexParser.Plus, 0)

        def QuestionMark(self):
            return self.getToken(common_regexParser.QuestionMark, 0)

        def getRuleIndex(self):
            return common_regexParser.RULE_quantifier_type

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterQuantifier_type"):
                listener.enterQuantifier_type(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitQuantifier_type"):
                listener.exitQuantifier_type(self)

    def quantifier_type(self):
